--- a/_posts/2019-12-31-the-us-narrative-today.html
+++ b/_posts/2019-12-31-the-us-narrative-today.html
@@ -1334,107 +1334,107 @@ stories:
   domain: http://www.valleyreporter.com/
   link: https://www.valleyreporter.com/index.php/news/local-news/13965-garage-fire-in-moretown
 images:
-- name: nazi-invasion-IMG_2971.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_2971.jpg
-- name: abandonedbuildings_colorful_dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_colorful_dream.jpg
-- name: death-valley-death-valley-national-park-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-sand-paper.jpg
-- name: 35201856153_61bc075e4b-udnie.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/35201856153_61bc075e4b-udnie.jpg
-- name: stalin-time-electric-tower-sun-behind.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-electric-tower-sun-behind.jpg
-- name: abandonedbuildings_ww2_color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_ww2_color.jpg
-- name: cargo-ship-cargo-ship-on-sea-jap-wav-pr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-jap-wav-pr.jpg
-- name: art-museum-art-museum-horiz-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-horiz-circuit.jpg
-- name: rockingchair-rockingchair-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-green-zuma.jpg
-- name: amusement-park-amusement-park-2-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-free-woman.jpg
-- name: dc-statue-dcstatue-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-spagetti-accident.jpg
-- name: old-door-lock-old-door-lock-2-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-kand-two.jpg
-- name: abe-lincoln-one-sunday-file-00-00-15-87.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-sunday-file-00-00-15-87.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-cinnamon-rolls.jpg
-- name: white-house-whitehouse-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-colorful-dream.jpg
-- name: adam-smith-adam-smith-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-sand-paper.jpg
-- name: trucksilo-trucksilo-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-blue-electricity.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-purp-paper.jpg
-- name: yosemite-yosemite-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-creativity.jpg
-- name: downtheline-downtheline-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-deep-connections.jpg
-- name: hollywood-building-hollywood-building-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-plentiful.jpg
-- name: gypsy-wagon-gypsywagon-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-neo-instinct.jpg
-- name: copper-circuit-stainless-tree-sun-ray.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-stainless-tree-sun-ray.jpg
-- name: nyc-flag-nycflag-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-aqua.jpg
-- name: downtown-trucksilo-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-gred-mash.jpg
-- name: oldroad-old-road-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-cinnamon-rolls.jpg
-- name: oldcabin-oldcabin-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-green-zuma.jpg
-- name: window-window-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-gan-vogh.jpg
-- name: cargo-ship-cargo-ship-on-sea-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-copper-circuit-2.jpg
-- name: death-valley-death-valley-national-park-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-satan-red.jpg
-- name: redondo-beach-harbor-redondo-beach-harbor-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-dark-dali.jpg
-- name: trucksilo-trucksilo-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-nazi-poster.jpg
-- name: machine-road-machine-road-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-cinnamon-rolls.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-dark-soul.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-emily-carr.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-atari-asteroids.jpg
-- name: server-cloud-server-racks-door-blue-circuit-4.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-blue-circuit-4.jpg
-- name: nazi-invasion-whie-house-close-up-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-whie-house-close-up-2.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-satan-red.jpg
-- name: border-fence-border-fence-on-hill-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-colorful-blocks.jpg
-- name: hollywood-building-hollywood-building-china-prop.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-china-prop.jpg
-- name: dc-statue-dcstatue-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-graham-sutherland.jpg
-- name: dragon-desert-desert-dragon-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-satan-red.jpg
-- name: powerlines-power-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-alberto-giacometti.jpg
-- name: supreme-court-supremecourt-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-blue-electricity.jpg
-- name: aws-s3-stories-fence-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-fence-ww2-dresden.jpg
-- name: dc-statue-dcstatue-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-crafty-painting.jpg
-- name: aws-s3-square-old-gas-pumps-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-old-gas-pumps-square.jpg
-- name: server-cloud-server-racks-door-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-blue-granite.jpg
-- name: server-cloud-server-racks-clouds-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-space-pizza.jpg
-- name: white-house-lawn-white-house-lawn-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-smooth-ride.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-gred-mash.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-gred-mash.png
+- name: old-cabin-oldcabin-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-mucha-mult.jpg
+- name: white-house-lawn-white-house-window-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-crabapple.jpg
+- name: dc-statue-dcstatue-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-colorful-blocks.jpg
+- name: border-crossing-bordercrossing-dali-three.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-dali-three.png
+- name: castle-on-hill-castle-on-hill-edinburgh-emily-carr.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-emily-carr.JPG
+- name: gears-4882162452-fa3126b38d-b-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-dark-rain.jpg
+- name: amusement-park-amusement-park-2-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-diego-rivera1.jpg
+- name: old-house-oldhouse-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-kandinsky-bv.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-blue-circuit.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-copper-circuit.jpg
+- name: stories-cargo-ship-on-sea-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-cargo-ship-on-sea-diego-rivera1.jpg
+- name: subway-subway-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-satan-red.jpg
+- name: old-door-lock-old-door-lock-2-horiz-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-horiz-circuit.jpg
+- name: power-lines-power-lines-empty-space-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-graham-sutherland.jpg
+- name: white-house-lawn-white-house-window-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-alien-goggles.jpg
+- name: supreme-court-supremecourt-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-sand-paper.jpg
+- name: bf-skinner-stairs-down-blue-green.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-stairs-down-blue-green.jpg
+- name: old-gas-pumps-oldgaspumps-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-green-zuma.jpg
+- name: walled-garden-walled-garden-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-marcel-duchamp.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-matrix.jpg
+- name: trucksilo-trucksilo-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-colorful-blocks.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-kandinsky-bv.jpg
+- name: stalin-time-dark-hallway-in-hotel.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-dark-hallway-in-hotel.jpg
+- name: blossombar-cinnamon-rolls-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-cinnamon-rolls-file-00-00-50-62.jpg
+- name: nyc-flag-nycflag-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-post-modern.jpg
+- name: aws-s3-stories-new-31-156-800-500-0-max-0--1--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-31-156-800-500-0-max-0--1--1.jpg
+- name: miamibeach-miamibeach-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-blue-electricity.jpg
+- name: adam-smith-adam-smith-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-internet-numbers.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-matrix.jpg
+- name: udnie-IMG_2410.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_2410.jpg
+- name: meadowbutterfly-meadow-butterfly-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-clean-view.jpg
+- name: sand-hand-sand-hand-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-post-modern.jpg
+- name: dragon-desert-desert-dragon-feed-people.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-feed-people.jpg
+- name: stories-new-43-150-800-500-0-max-0--5--5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-43-150-800-500-0-max-0--5--5.jpg
+- name: flower-barbed-wire-flower-barbed-wire-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-smooth-ride.jpg
+- name: nazi-invasion-statue-of-liberty-front-bright.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-statue-of-liberty-front-bright.jpg
+- name: old-granary-field-granaryfield-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-gan-vogh.jpg
+- name: curtain-curtain-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-pablo-blue.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-kand-two.jpg
+- name: gypsymosaic-gypsy-eyes-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-plentiful.jpg
+- name: mosaic-face-mosaic-face-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-neo-instinct.jpg
+- name: gypsymosaic-gypsy-eyes-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-green-zuma.jpg
+- name: downtheline-downtheline-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-constitution.jpg
+- name: old-granary-field-granaryfield-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-pablo-blue.jpg
+- name: san-francisco-street-view-san-francisco-street-view-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-colorful-blocks.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-atari-missle.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-atari-missle.png
+- name: castle-wall-DSC-0067-ww2-color.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-ww2-color.JPG
+- name: yosemite-yosemite-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-pablo-blue.jpg
+- name: nazi-invasion-city-vancouver-clouds.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-city-vancouver-clouds.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-blue-electricity.jpg
 ---
 Happy Birthday Gavin And Miles Ballard.&nbsp;Isabella Boylston Returns For Performance Trio.&nbsp;Miami Beach Parks And Rec Worker Says Supervisor Used Racial Slur.&nbsp;Ouachita Sweeps Home Wins Against Bismarck In Hot Spring County Hoops Showdown.&nbsp;Mount Pleasant Preschoolers Donate Clothing And Stuffed Animals To Children In Need.&nbsp;Twas Our Night Before Christmas.&nbsp;Barker Signs With Montana.&nbsp;Highland Secretary Of State.&nbsp;
